Fix navigation bar bug on smaller screens

--- a/development/css/navbar.css
+++ b/development/css/navbar.css
@@ -112,7 +112,7 @@
     left: 0;
     background: #fff;
     border: 1px solid #ccc;
-    z-index: 10;
+    z-index: 999;
     list-style: none;
     padding: 5px 0;
     margin: 0;
@@ -174,7 +174,7 @@
         width: 100%;
     }
 
-    .navbar ul li {
+    .navbar .nav-container .nav-links li {
         text-align: center;
         margin: 10px 0;
         opacity: 0; /* Initially hidden */
